--- a/assesment-two/index.html
+++ b/assesment-two/index.html
@@ -24,25 +24,25 @@
       <div class="product-cards">
         <div class="card">
           <img
-            src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-image-512.png"
+            src="https://images.pexels.com/photos/301926/pexels-photo-301926.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt=""
           />
         </div>
         <div class="card">
           <img
-            src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-image-512.png"
+            src="https://images.pexels.com/photos/3771074/pexels-photo-3771074.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt=""
           />
         </div>
         <div class="card">
           <img
-            src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-image-512.png"
+            src="https://images.pexels.com/photos/5303551/pexels-photo-5303551.jpeg"
             alt=""
           />
         </div>
         <div class="card">
           <img
-            src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-image-512.png"
+            src="https://images.pexels.com/photos/8419234/pexels-photo-8419234.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt=""
           />
         </div>
@@ -52,45 +52,45 @@
       <div class="product-types">
         <div class="box">
           <img
-            src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-image-512.png"
+            src="https://images.pexels.com/photos/8926458/pexels-photo-8926458.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt=""
           />
-          <p>Toys</p>
+          <p>School</p>
         </div>
         <div class="box">
           <img
-            src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-image-512.png"
+            src="https://images.pexels.com/photos/8617638/pexels-photo-8617638.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt=""
           />
-          <p>Fashion</p>
+          <p>Book</p>
         </div>
         <div class="box">
           <img
-            src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-image-512.png"
+            src="https://images.pexels.com/photos/3768126/pexels-photo-3768126.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt=""
           />
-          <p>Cloth</p>
+          <p>project</p>
         </div>
         <div class="box">
           <img
-            src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-image-512.png"
+            src="https://images.pexels.com/photos/355952/pexels-photo-355952.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt=""
           />
           <p>Accessories</p>
         </div>
         <div class="box">
           <img
-            src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-image-512.png"
+            src="https://images.pexels.com/photos/3973059/pexels-photo-3973059.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt=""
           />
-          <p>Gifts</p>
+          <p>Idea</p>
         </div>
       </div>
     </main>
 
     <!-- Footer -->
     <footer>
-      <p>&copy; MyWebsiteBasedOnScss...</p>
+      <p>&copy; jinalpaghadal</p>
     </footer>
   </body>
 </html>
